--- a/Isg.Api/Isg.Api.csproj
+++ b/Isg.Api/Isg.Api.csproj
@@ -8,6 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1"/>
+        <PackageReference Include="Sentry" Version="5.14.0" />
+        <PackageReference Include="Sentry.AspNetCore" Version="5.14.0" />
+        <PackageReference Include="Sentry.Extensions.Logging" Version="5.14.0" />
+        <PackageReference Include="Sentry.OpenTelemetry" Version="5.14.0" />
     </ItemGroup>
 
 </Project>
